testdata/baselines/reference/compiler/quantifiedTypesIntermediate.errors.txt
quantifiedTypesIntermediate.ts(14,22): error TS2322: Type 'number' is not assignable to type 'string'.
quantifiedTypesIntermediate.ts(26,22): error TS2322: Type 'number' is not assignable to type 'string'.


==== quantifiedTypesIntermediate.ts (2 errors) ====
    type Input<T> = { values: T[], identifier: (value: T) => string }
    declare const f: (t: (<T> Input<T>)[]) => void
    
    f([
      {
        values: [{ key: "a" }, { key: "b" }, { key: "c" }],
        identifier: v => v.key
      }
    ])
    
    f([
      {
        values: [{ key: "a" }, { key: "b" }, { key: "c" }],
        identifier: v => Number(v.key)
                         ~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6502 quantifiedTypesIntermediate.ts:1:44: The expected type comes from the return type of this signature.
      }
    ])
    
    
    f([
      {
        values: [{ key: "a" }, { key: "b" }, { key: "c" }],
        identifier: v => v.key
      },
      {
        values: [{ key: "a" }, { key: "b" }, { key: "c" }],
        identifier: v => Number(v.key)
                         ~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6502 quantifiedTypesIntermediate.ts:1:44: The expected type comes from the return type of this signature.
      }
    ])
    
    
    f([
      {
        values: [{ key: "a" }, { key: "b" }, { key: "c" }],
        identifier: v => v.key
      },
      {
        values: [{ id: 1 }, { id: 2 }, { id: 3 }],
        identifier: v => v.id.toString()
      }
    ])
    